--- a/httpdocs/css/custom.css
+++ b/httpdocs/css/custom.css
@@ -97,6 +97,9 @@
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    display: 1;
+    width: 100%;
+    height: 100%;
   }
   
   /* On mouse-over, add a deeper shadow */
@@ -107,4 +110,24 @@
   /* Add some padding inside the card container */
   .container {
     padding: 2px 16px;
+  }
+.card-container{
+  height: 100%;
+  display: flex;
+}
+  .ul-tick {
+    list-style: none;
+    text-align: left;
+    font-size: 12px;
+    padding-bottom: 10%;
+    margin-left: 12%;
+    margin-right: 5%;
+  }
+  
+  .ul-tick li:before {
+    content: '✓ ';  
+  }
+  .col2 {
+    flex: 1; /* additionally, equal width */
+    
   }
